--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "clsx": "latest",
+    "connected-react-router": "^6.7.0",
     "history": "^4.10.1",
     "react": "latest",
     "react-dom": "latest",
