--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-ui/core": "latest",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
     "clsx": "latest",
     "connected-react-router": "^6.7.0",
     "history": "^4.10.1",
@@ -19,7 +21,8 @@
     "react-router": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "latest",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "browserslist": {
     "production": [
